# bio-news-agent

./: .env.example  .gitignore  README.md  feeds.json  pyproject.toml
.github/workflows/: digest.yml
src/: collector.py  config.py  filterer.py  graph.py  main.py  renderer.py
tests/: test_collector.py  test_filterer.py  test_graph.py  test_renderer.py
